[package]
name = "piewmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.2", features = ["derive"] }
crossterm = "0.25.0"
quick-xml = "0.27.0"
tui = "0.19.0"
serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
log4rs = "1.2.0"
log = "0.4.17"
color-eyre = { version = "0.5", default-features = false }
